# filtered-vector-search

./: js_div.ipynb  js_div_sift1_test.ipynb
src/: batcher.py  exp.ipynb  helper_funcs.py  js_div.ipynb  js_div_sift1_test.ipynb  output_0_001.txt  output_0_01.txt  output_0_1.txt  output_0_5.txt  planner.py  script.py  set_up.ipynb  setup.py  t.py  tau_estimator.py  tau_interpolator.py  tester.py
src/cpp/: CMakeLists.txt  README.md  build_indexes.cpp  filter_kernel.cpp  fvs_common.cpp  fvs_common.h  search_filters.cpp
test/experiment1/: strategy_comparison_q10000_topk10.csv  strategy_comparison_q10000_topk10.md
test/experiment2/: strategy_comparison_q10000_topk100.csv  strategy_comparison_q10000_topk100.md
test/experiment3/: strategy_comparison_q10000_topk100.csv  strategy_comparison_q10000_topk100.md
